--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,9 @@
 /*ATRIBUTOS GLOBALES*/
 * {
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 300;
   margin: 0%;
   padding: 0%;
 }
-
-
 
 
 
@@ -14,10 +11,13 @@
 nav li {
   margin-top: 1.5rem;
   margin-right: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
-
+.fw-semibold{
+ color: #2A4473,
+  
+}
 
 /************ETIQUETA a CON HOVER *****************/
 
@@ -36,19 +36,19 @@ a:visited {
 .login_principal{
   text-decoration: none;
   text-align: center;
-
+  border-style: none;
 }
 
 .pages {
   justify-content: center;
-  color:#33354b
+
 
 }
 
 ul {
   width: 100%;
   display: flex;
-  justify-content: right;
+justify-content: center;
   list-style: none;
   color: #27325E;
   /*para que no se vean bullets de la lista*/
@@ -56,17 +56,17 @@ ul {
 
 li {
   font-size: 1.2rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   color: #27325E;
 }
 
 /**********************BOTÓN DEL LOGIN******************************/
 #login {
-  margin-top: 1.5rem;
-  margin-bottom: 3rem;
+  margin-top: 1.5rem; 
   background-color: #ffa400;
   color: #ffffff;
   margin-right: 1rem;
+  border: none !important;
 }
 
 #login:hover {
@@ -82,7 +82,6 @@ color: #ffff;
 button {
   width: 10rem;
   height: 2.5rem;
-  border-radius: 2rem;
   font-size: 1.3rem;
   color: #fff;
   background-color: #ffa400;
@@ -94,6 +93,13 @@ button:hover {
   color: #ffffff
 }
 
+.btn-primary{ 
+  border: none;
+}
+
+.btn-primary:hover {
+background-color: #ffa400;
+}
 /******************PARA QUE TOME TODA EL AREA DEL BOTÓN************************/
 button a {
   display: block;
@@ -102,23 +108,11 @@ button a {
 
 
 p {
-  width: 30%;
-  font-size: 1.5rem;
+   font-size: 1.3rem;
   margin-left: 1rem;
-  font-size: 2rem;
+ 
 }
 
-
-.logo {
-  width: 13rem;
-  margin-top: 1rem;
-
-}
-
-
-section {
-  height: 30rem;
-}
 
 .banner {
   display: flex;
@@ -147,14 +141,6 @@ h2 {
 }*/
 
 
-/*chamuyo marketinero*/
-p {
-  font-weight: bold;
-  color: #33354b;
-  font-size: 1.8rem;
-  width: 90%;
-  /*el ancho que ocupa es el 100% del contenedor p*/
-}
 
 .bullets {
   width: 100%;
@@ -167,23 +153,17 @@ p {
 }
 
 
-/********IMAGEN BANNER**********/
-.medico {
-  width: 100%;
-  height: auto;
-  align-items: center;
-  margin-right: 2rem;
-}
+
 
 /**********FORMULARIO DE CONTACTO DEL BANNER*******************/
+
+
 .contact-form {
   background-color: #b8e0ff;
-  border-radius: 8%;
-  width: 35rem;
+  border-radius: 5%;
+  width: fit-content;
   height: auto;
-  margin-left: 5rem;
-  margin-top: 1rem;
-   box-shadow: 0, 0, 40px, -10px;
+    box-shadow: 0, 0, 40px, -10px;
   border-color: #33354b;
   box-shadow: 5px 7px 10px #a889a8;
   text-shadow: #433543;
@@ -298,16 +278,9 @@ fieldset {
 }
 
 /***********sección 3 pasos*************/
-.analizando {
-  background-color: #0a4c9e;
-  margin-top: 6rem;
-  margin-bottom: 3rem;
-}
-
 .icons {
   width: 100%;
   height: auto;
-  margin-top: 5rem;
   display: inline-block;
   text-align: center;
   position: relative;
@@ -321,7 +294,7 @@ h4 {
 }
 
 .necesidades {
-  font-size: 1rem;
+  font-size: 1.3rem;
   color: #ffffff;
   font-weight: 100;
 }
@@ -329,20 +302,20 @@ h4 {
 /*SECCIÓN DE REVIEWS*/
 
 /*ul que contiene cada elemento */
-.comentarios {
-  height: fit-content;
-  margin: 1rem;
-  font-size: 1.2rem;
-}
+
 
 .row {
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
+  justify-content: space-between; 
+
 }
 
-.card {
-  margin: 3rem;
+.card-text {
+ font-size: 0.5rem;
+}
+
+.card-body{
+  display: flex;
 }
 
 /*nombre especialidad y estrellas*/
@@ -371,13 +344,7 @@ h6 {
 
 /******SECCIÓN CALL TO ACTION********/
 
-.call-to-action {
-  margin-top: 1rem;
-  margin-bottom: 3rem;
-  background-color: #5296e7;
-  height: 15rem;
 
-}
 
 /*botón del formulario de contacto*/
 .submit {
@@ -387,90 +354,29 @@ h6 {
 
 /*texto enfocate en tus pacientes*/
 .pacientes {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 900;
-  color: #ffff;
   text-align: center;
   padding-top: 3rem;
+
 }
 
-/*Preguntas Frecuentes*/
-.faq {
-  font-size: x-small;
-  justify-content: center;
-  color: #33354b;
-}
+
 
 /*Titulo de preguntas frecuentes*/
 .titulo-faq {
   text-align: center;
   margin-bottom: 1rem;
   margin-top: 1rem;
-  font-size: 2.5rem;
+
   justify-items: center;
-}
-
-
-.faq ul {
-  width: 100%;
-  display: inline-block;
-  justify-content:left;
-
-}
-
-/*elementos de preguntas frecuentes*/
-.faq ul li { 
-  position: relative;
-  float: none;
-  text-align: center; 
-  justify-items: left;
 }
 
 /*fin preguntas frecuentes*/
 
-/*subpágina quienes somos*/
-
-.quienes-somos {
-  display: flex;
-  justify-content: center;
-  height: 68vh;
-  margin-top: 6rem;
-}
 
 
-.somos {
-  display: inline-block;
-  text-align: left;
-  width: 35rem;
-  padding-top: 1rem 0 0 1rem;
-  font-size: 1.4rem;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
 
-.quienes-somos h4 {
-  color: #5296e7;
-  font-size: 2rem;
-  font-weight: 900;
-  text-align: left;
-  padding-left: 1rem;
-}
-
-b {
-  font-weight: 900;
-}
-
-/*fin subpágina quienes somos*/
-
-/********************INICIO PÁGINA LOGIN*********************/
-
-
-/****************CONTENEDOR PRINCIPAL DE LA PÁGINA*******************/
-.main-login {
-  display: flex;
-  justify-content: center;
-  height: 79vh;
-  top: 4rem;
-}
 
 
 /*******************TITULO INGRESÁ***********************/
@@ -527,13 +433,6 @@ p .login {
 
 }
 
-.olvidaste {
-  font-size: 1.2rem;
-  line-height: 2.5rem;
-
-}
-
-
 
 /*************FIN PÁGINA LOGIN************/
 
@@ -542,105 +441,26 @@ p .login {
 /**************INICIO PÁGINA REGISTRO*************/
 
 /*****FORMULARIO DE REGISTRO*******/
-.form-register {
-  background-color: #1e7dd1;
-  width: 35rem;
-  height: auto;
-  border-radius: 1rem;
-  padding: 2rem;
-  margin: auto;
-  justify-content: right;
-  font-family: roboto, "Helvetica Neue";
-  box-shadow: 0, 0, 40px, -10px;
-  border-color: #33354b;
-  box-shadow: 5px 7px 10px #a889a8;
-  text-shadow: #433543;
+
+
+.contenedor-formulario{
+  background-color:#27325E;
 }
 
-
-.main-register {
-  height: 78vh;
-  margin-top: 3rem;
-  display: flex;
-  justify-content: space-between;
+.click{
+  font-size: 0.8rem;
+  color: #fff;
 }
-
-.form-register h4 {
-  color: #ffffff;
-  font-size: 3rem;
-  text-align: center;
-
-}
-
-.form-register p {
-  height: 2.5rem;
-  text-align: center;
-  font-size: 1.5rem;
-}
-
-.form-register a {
-  color: #f6eded;
-  text-decoration: none;
-}
-
-.form-register a:hover {
-  color: #ffa400;
-  text-decoration: underline;
-}
-
-
-.foto-registro {
-  display: flex;
-  justify-content: space-around;
-  justify-content: left;
-  margin-top: 1.5rem;
-  margin-left: 6.5rem;
-  width: 50rem;
-}
-
-main .registrado {
-  font-size: 1.2rem;
-}
-
 
 /***************footer todas las páginas*******************/
-footer {
-  background-color: #27325E;
-  width: 100%;
-  height: 8rem;
-  padding-top: 1rem;
-  position: relative
-}
-
-
-footer ul {
-  justify-content: center;
-  display: flex;
-}
-
-
-footer li {
-  margin: 0.5rem;
-  height: auto;
-}
-
-.mailto {
-  background-color: #ffa400;
-  height: 3rem;
-  margin: 0 auto;
-  width: 2rem;
-}
-
 
 
 .copyright {
   color: #ffffff;
   font-size: 1.3rem;
-  margin-bottom: 1rem;
   text-align: center;
   margin: 0 auto;
-}
-
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif}
 
 /*fin footer todas las páginas*/
 
@@ -666,12 +486,12 @@ footer li {
 
 /*Texto que tiene la palabra gracias*/
 .gracias {
-  width: 25rem;
+  width: 20rem;
   margin: 0 auto;
   align-self: center;
   font-size: 5rem;
   font-weight: 900;
-  margin-bottom: 3rem;
+
 }
 
 
@@ -683,33 +503,15 @@ footer li {
 
 .shaking-hands {
   margin: 0 auto;
-  margin-top: 4rem;
   align-items: center;
   position: relative;
-  margin-bottom: 2rem;
+
 }
-
-/*********FIN PÁGINA DE AGRADECIMENTO********/
-
-/**********PÁGINA DE SERVICIOS*********/
 
 /**********grid para servicios*********/
-.wrapper {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  display: grid;
-  grid-template-rows: repeat(3, auto);
-  /**cantidad de columnas de elementos, tamaño /
-  grid-gap: 1rem; /*espaciados entre elementos*/
-  grid-auto-flow: column;
-  grid-auto-columns: 33% 33% 33%;
-  text-align: center;
-  border-color: #27325E;
-  height: 100%;
-}
 
-.services-main {
-  height: 70vh;
+.servicios-main {
+  height: 100vh;
 }
 
 .historial_medico {
@@ -726,148 +528,11 @@ footer li {
 
 /*****titulo portal medilink********/
 .noticias {
-  font-size: 3.2rem;
-  color: #2A4473;
-  font-weight: 800;
-  text-align: center;
-  margin-top: 2rem;
-  margin-bottom: 3rem;
-  list-style: outside;
-
-}
-
-
-
-/***********ARTICULO ALIMENTACIÓN************/
-
-.alimentacion {
-  display: flex;
-  justify-content: space-evenly
-}
-
-
-.seccion_bienestar {
-  height: 45rem;
-  display: flex;
-  justify-content: center;
-  padding-top: 3rem;
-}
-
-.titulo_bienestar {
-  color: #27325E;
-  font-size: 1.6rem;
   font-weight: 900;
-  text-align: right;
-  margin-right: 1rem;
-
-}
-
-.subtitulo_bienestar {
-  font-size: 1.4rem;
-  color: #12bc8c;
-  font-weight: 900;
-  text-align: right;
-  margin-right: 1rem;
-  margin-top: 0.1rem;
+  
 }
 
 
-.habitos {
-  font-size: 1.2rem;
-  font-weight: 100;
-  width: auto;
-  margin-top: 0.3rem;
-  text-align: right;
-  margin-right: 1rem;
-
-
-}
-
-
-.alimentacion_imagen {
-  margin-top: 0.5rem;
-
-}
-
-/*****************ARTICULO SUEÑO*******************/
-
-.seccion_suenio {
-  height: fit-content;
-  display: flex;
-  justify-content: center;
-}
-
-.gestion_sueño {
-  height: auto;
-  display: flex;
-  justify-content: space-around;
-}
-
-
-.descanso {
-  margin-top: 0.5rem;
-}
-
-
-.body_gestion {
-  display: inline-block;
-  /*alineacion texto*/
-  justify-content: center;
-  height: fit-content;
-  margin-left: 1rem;
-  margin-top: 2rem;
-}
-
-
-.titulo_gestion {
-  font-weight: 900;
-  text-align: left;
-  font-size: 2.2rem;
-  margin-bottom: -0.5rem;
-}
-
-.subtitulo_gestion {
-  color: #ffa400;
-  font-size: 1.6rem;
-  text-align: left;
-  margin-bottom: 0.5rem;
-  width: auto;
-  justify-content: left;
-
-}
-
-
-.texto_gestion {
-  color: #27325E;
-  font-size: 1.2rem;
-  font-weight: 300;
-  width: auto;
-}
-
-
-/***********seccion ejercicio************/
-.ejercicio {
-  margin-top: 8rem;
-}
-
-.titulo_ejercicio {
-  font-size: 2.5rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 0.5rem;
-  margin-bottom: 3rem;
-}
-
-.articulo_ejercicio {
-  height: fit-content;
-}
-
-.contenedor_imagenes_ejercicio {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-
-}
 
 /*IMAGENES DE SECCIÓN EJERCICIO*/
 .card_ejercicio1 {
@@ -886,9 +551,8 @@ footer li {
 }
 
 .titulo_ejercicio {
-  font-size: 3rem;
+  font-size: 2.3rem;
   color: #27325E;
-  margin-top: 2rem;
 }
 
 .texto_ejercicio_container p {
@@ -899,58 +563,9 @@ footer li {
 }
 
 
-/******************************DASHBOARD****************************/
-
-/*****MAIN*******/
-
-.main-dashboard {
-  flex-direction: column;
-  display: flex;
-}
-
-.contenedor-dasboard {
-  height: 100vh;
-  display: flex;
-  width: 100%;
-}
 
 
-.principal-dashboard {
-  display: grid;
-  /*alineacion vertical*/
-  place-items: center;
-  /*coloca items en el centro*/
-  height: 100%;
-  position: relative;
-}
 
-.bienvenida {
-  width: 100%;
-  height: 8rem;
-  background-color: #27325E;
-  color: #FFFFFF;
-  font-size: 2.5rem;
-  text-align: right;
-  line-height: 7rem;
-}
-
-.texto-bienvenida {
-  color: #ffa400;
-}
-
-.ficha-medico {
-  display: inline-block;
-  padding-left: 5rem;
-}
-
-.aside-dashboard {
-  width: 21%;
-  height: 100vh;
-  background-color: #27325E;
-  float: left;
-  text-align: center;
-
-}
 
 .menu-vertical {
   color: #ffff;
@@ -988,11 +603,6 @@ footer li {
 }
 
 
-.medico-dash {
-  width: 60%;
-  margin: 0 auto;
-  height: auto;
-}
 
 .nombre {
   font-size: 2rem;
@@ -1013,67 +623,39 @@ footer li {
 
 
 
-/************Barra de Busqueda*****************/
+
 
 #buscador {
-  background: size 1.8rem;
-  width: 25.25rem;
-  height: 3.2rem;
+ 
+  height: 3rem;
   border: transparent;
   border-bottom: solid 1px #ccc;
   background-color: #ffffff;
   border-radius: 0.7rem;
-  margin-right: 7rem;
+font-size: 1rem;
 
 }
 
+/*dashboard*/
 
-.buscador-bienvenida {
-  display: inline-block;
-  justify-content: center;
-  margin-right: 8rem;
+.p-dashboard {
+  background-color: #27325E;
 }
+.dashboard{
+  background-color: #27325E;
+}
+
+.bienvenida{background-color: #27325E;
+  padding-top: 2.5rem;
+}
+
+.texto-bienvenida{
+  line-height: 0.5rem;
+}
+
 
 /****************calendario***************************/
 
-
-/*****************contenedor general del calendario***********************/
-.calendario-container {
-  background-color: #a889a8;
-  width: 100%;
-  height: 50%;
-  position: relative;
-
-}
-
-/*****************contenedor general del calendario***********************/
-.calendario {
-  margin: 0 right;
-  height: 50%;
-  width: 100%;
-  position: relative; 
-}
-
-/******contenedor superior calendario******/
-.mes-calendario {
-  display: grid;
-  /*para alinear verticalmente*/
-  place-items: center;
-  /*para alinear verticalmente*/
-  margin-top: 3.7rem;
-  font-size: 3rem;
-  text-align: center;
-  margin: 0 auto;
-  background-color: #1FBE92;
-  border-color: #2A4473;
-  border-style: inset;
-  width: 99.5%;
-  height: 5rem;
-  color: #e9e6df;
-  margin-right: 2rem; 
-  color: #27325E;
-  font-weight: 600;
-}
 
 
 
@@ -1083,7 +665,6 @@ table {
   width: 100%;
   height: auto;  
   margin: 0 auto;
-
 }
 
 
@@ -1107,61 +688,8 @@ th {
  
 }
 
-tr {
-  width:6.25rem;
-  height: 3.125rem;
-  background: #ede8e8;
-  max-width: 31.25rem;
-}
 
-.paciente_agendado{
-  background-color: #059630;
-  color:#ffff;
-  height: 70%;
-  width: 80%;
-  text-align: center;
-  border-radius: 0.5rem;
-  margin-left: 1rem;
-  display: grid; /*display grid + place items sirve para alinear contenido dentro de la celda*/
-  place-items: center;
-  
-}
 
-.paciente_cancelado{
-  background-color: #fa2d2d;
-  color:#ffff;
-  height: 70%;
-  width: 80%;
-  text-align: center;
-  border-radius: 0.5rem;
-  margin-left: 1rem;
-  display: grid; /*display grid + place items sirve para alinear contenido dentro de la celda*/
-  place-items: center;
-}
-
-.paciente_cursando{
-  background-color:#ffa400;
-  color:#ffff;
-  height: 70%;
-  width: 80%;
-  text-align: center;
-  border-radius: 0.5rem;
-  margin-left: 1rem;
-  display: grid; /*display grid + place items sirve para alinear contenido dentro de la celda*/
-  place-items: center;
-}
-
-.paciente_finalizado{
-  background-color: #051986;
-  color:#ffff;
-  height: 70%;
-  width: 80%;
-  text-align: center;
-  border-radius: 0.5rem;
-  margin-left: 1rem;
-  display: grid; /*display grid + place items sirve para alinear contenido dentro de la celda*/
-  place-items: center;
-}
 
 /*****RELLENO CELDAS******/
 h1 {  
@@ -1173,8 +701,7 @@ table {
   color: #2A4473;
   text-align: center;
   font-size: 1.2rem;
-  font-weight: 900;
-}
+ }
 
 .principal {
   width: 79%;
@@ -1200,11 +727,9 @@ table {
 
 .header-info {
   background-color: #1FBE92;
-  height: 3rem;
-  padding-bottom: 1rem;
-  padding-top: 0.5rem;
+  height: 3rem;  
   color: #fff;
-  text-align: center;
+ padding-right: 0.4rem;
 }
 
 .cards-pacientes {
@@ -1247,8 +772,7 @@ table {
     font-size: 1rem;
   }
 
-  /**************************MODALES******************************/
-
+  /**************************MODALES*****************
 
   .historial{
     background-color: #bdb1b1;
@@ -1314,8 +838,8 @@ padding-bottom:1rem;
 .info-paciente{ 
  display: grid;
  /*alineacion vertical*/
- place-items: center;
- /*coloca items en el centro*/
+
+ /*coloca items en el centro
  width: 100%;
  margin-right: 3rem;
 }
@@ -1333,6 +857,7 @@ padding-bottom:1rem;
   z-index:998;
 }
 
+*************/
 /*> selector hijo directo (más proximo
 .historial > i{
 position:absolute;
@@ -1341,7 +866,7 @@ top:0;
 font-size: 2rem;
 }*/
 
-/*> selector de elemento hermano (dos elementos al mismo nivel)*/
+/*> selector de elemento hermano (dos elementos al mismo nivel)
 #btn-modal:checked~.modal{
  display:flex; 
 
@@ -1356,4 +881,8 @@ font-size: 2rem;
   position:absolute;
   height: 100%;
   width: 100%;
+}
+
+.modal-header{
+  justify-content: center;
 }
